Replace composeWebViewMultiplatformDesktop and kcef with composeNativeWebview.
Co-authored-by: Florian Kistner <florian.kistner@jetbrains.com>